# nixfetch

./: LICENSE  README.md  flake-metadata.json  flake-show.json  pyproject.toml
nixfetch/: __main__.py  app.py  async_run.py  cmd.py  custom_logger.py  dirs.py
nixfetch/nix/: __init__.py
