[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nixfetch"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "rich"
    ]
readme = "README.md"
keywords = ["nix", "flake", "stats"]
authors = [
  {name = "Povl Filip Sonne-Frederiksen"}
]

[project.scripts]
nixfetch = "nixfetch:run"

[project.urls]
source = "https://github.com/pfmephisto/nixfetch"
